@@ -2,15 +2,17 @@ package edu.hw4;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 public class TestAnimalAction {
-    private static @NotNull List<Animal> createAnimals() {
+    private static @NotNull List<Animal> createTheFirstGroupOfAnimals() {
         return Arrays.asList(
             new Animal("Samba", Animal.Type.CAT, Animal.Sex.F, 3, 20, 4, false),
             new Animal("mr big boy", Animal.Type.CAT, Animal.Sex.M, 4, 101, 5, true),
@@ -22,17 +24,17 @@ public class TestAnimalAction {
         );
     }
 
-    private static @NotNull List<Animal> createAnimals2() {
+    private static @NotNull List<Animal> createTheSecondGroupOfAnimals() {
         return Arrays.asList(
             new Animal("little boy", Animal.Type.CAT, Animal.Sex.M, 4, 10, 5, true),
             new Animal("Pasha", Animal.Type.FISH, Animal.Sex.F, 1, 5, 7, false),
-            new Animal("Victoria", Animal.Type.FISH, Animal.Sex.M, 2, 2, 3, true)
+            new Animal("Victoria", Animal.Type.FISH, Animal.Sex.M, -2, 1000, 0, true)
         );
     }
 
     @Test
     void testThatSortHeightReturnedAnimalsSortedByHeightAscending1() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         List<Animal> sortedAnimals = AnimalAction.sortHeight(animals);
 
         for (int i = 0; i < sortedAnimals.size() - 1; i++) {
@@ -44,7 +46,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatSortWeightReturnedAnimalsSortByWeightDescending2() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         int k = 3;
         List<Animal> sortedAnimals = AnimalAction.sortWeight(animals, k);
 
@@ -57,7 +59,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatCountTypeReturnedCorrectMap3() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
 
         Map<Animal.Type, Integer> expectedCount = new HashMap<>();
         expectedCount.put(Animal.Type.CAT, 2);
@@ -73,7 +75,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatFindTheLongestNameReturnedCorrectRes4() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         Animal animalWithLongestName = AnimalAction.findTheLongestName(animals);
 
         int lenghtOfName = (animalWithLongestName.name()).replace(" ", "").length();
@@ -84,7 +86,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatPredominantSexReturnedCorrectlySex5() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
 
         Animal.Sex predominantSex = AnimalAction.predominantSex(animals);
 
@@ -93,7 +95,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatHeaviestAnimalSpeciesReturnedMapOfTypeAndHeaviestAnimal6() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         Map<Animal.Type, Animal> expectedHeaviestAnimals = new HashMap<>();
         expectedHeaviestAnimals.put(
             Animal.Type.CAT,
@@ -123,7 +125,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatFindOldestAnimalReturnedCorrectRes7() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         Animal oldestAnimal = AnimalAction.findOldestAnimal(animals);
 
         int maxAge = oldestAnimal.age();
@@ -134,7 +136,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatFindWeightestAnimalBelowKReturnedCorrectRes8() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         double k = 10.1;
 
         Animal expectedAnimal = new Animal("Nemo", Animal.Type.FISH, Animal.Sex.M, 1, 5, 6, false);
@@ -147,7 +149,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatGetSumOfPawsReturnedCorrectSum9() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         int expectedSum = 26;
 
         int actualSum = AnimalAction.getSumOfPaws(animals);
@@ -157,7 +159,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatGetAgeNotMatchingPawsReturnedCorrectList10() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         List<Animal> expectedList = Arrays.asList(
             new Animal("Samba", Animal.Type.CAT, Animal.Sex.F, 3, 20, 4, false),
             new Animal("Mars", Animal.Type.DOG, Animal.Sex.M, 5, 30, 8, true),
@@ -172,7 +174,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatGetBitingAnimalsWithHeightGreaterThan100ReturnedCorrectList11() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         List<Animal> expectedList = List.of(
             new Animal("mr big boy", Animal.Type.CAT, Animal.Sex.M, 4, 101, 5, true));
 
@@ -183,7 +185,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatFindCountAnimalsWithWeightGreaterThanHeightReturnedCorrectCount12() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         int expectedCount = 1;
 
         int actualCount = AnimalAction.findCountAnimalsWithWeightGreaterThanHeight(animals);
@@ -193,9 +195,9 @@ public class TestAnimalAction {
 
     @Test
     void testThatFindAnimalsWithNameBigThanTwoWordsReturnedCorrectResults13() {
-        List<Animal> animals = createAnimals();
-        List<Animal> expectedAnimals = Arrays.asList(
-            new Animal("mr big boy", Animal.Type.CAT, Animal.Sex.M, 4, 101, 5, true)
+        List<Animal> animals = createTheFirstGroupOfAnimals();
+        List<Animal> expectedAnimals = List.of(
+                new Animal("mr big boy", Animal.Type.CAT, Animal.Sex.M, 4, 101, 5, true)
         );
 
         List<Animal> result = AnimalAction.findAnimalsWithNameBigThanTwoWords(animals);
@@ -205,7 +207,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatFindDogWithHeightMoreThanKReturnedCorrectResult14() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         double k = 25;
 
         Boolean result = AnimalAction.findDogWithHeightMoreThanK(animals, k);
@@ -215,7 +217,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatFindSumWeightBetweenKAndLYearsReturnedCorrectResult15() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         int k = 3;
         int l = 5;
         int expectedWeight = 12;
@@ -227,7 +229,7 @@ public class TestAnimalAction {
 
     @Test
     public void testThatAnimalsAreSortedByTypeSexAndNameReturnedCorrectSort16() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         List<Animal> sortedAnimals = AnimalAction.sortAnimalsByTypeSexAndName(animals);
 
         List<Animal> expectedSortedAnimals = Arrays.asList(
@@ -245,7 +247,7 @@ public class TestAnimalAction {
 
     @Test
     void testThatAreSpidersBitesMoreThanDogsReturnedCorrectResult17() {
-        List<Animal> animals = createAnimals();
+        List<Animal> animals = createTheFirstGroupOfAnimals();
         Boolean expected = false;
 
         Boolean result = AnimalAction.areSpidersBitesMoreThanDogs(animals);
@@ -255,7 +257,8 @@ public class TestAnimalAction {
 
     @Test
     void testThatFindHaviestFishInListsReturnedCorrectResult18() {
-        List<List<Animal>> animalsLists = Arrays.asList(createAnimals(), createAnimals2());
+        List<List<Animal>> animalsLists =
+            Arrays.asList(createTheFirstGroupOfAnimals(), createTheSecondGroupOfAnimals());
         Animal expected = new Animal("Pasha", Animal.Type.FISH, Animal.Sex.F, 1, 5, 7, false);
 
         Animal result = AnimalAction.findHaviestFishInLists(animalsLists);
@@ -263,4 +266,32 @@ public class TestAnimalAction {
         assertThat(result).isEqualTo(expected);
     }
 
+    @Test
+    public void testThatFindErrorsReturnsTruthErrors19() {
+        List<Animal> animals = createTheSecondGroupOfAnimals();
+
+        Map<String, Set<ValidationError>> errorMap = AnimalAction.findErrors(animals);
+
+        Set<ValidationError> expected = new HashSet<>();
+        expected.add(new ValidationError("Invalid param: -2"));
+        expected.add(new ValidationError("Invalid param: 1000"));
+        expected.add(new ValidationError("Invalid param: 0"));
+        Set<ValidationError> expectedEmpty = new HashSet<>();
+
+        assertThat(errorMap.get("Victoria")).isEqualTo(expected);
+        assertThat(errorMap.get("Pasha")).isEqualTo(expectedEmpty);
+        assertThat(errorMap.get("little boy")).isEqualTo(expectedEmpty);
+    }
+
+    @Test
+    void testThatFindReadableErrorsReturned() {
+        List<Animal> animals = createTheSecondGroupOfAnimals();
+        Map<String, String> readableErrors = AnimalAction.findReadableErrors(animals);
+        String expectedOut = "height : Invalid param  1000, age : Invalid param  -2, weight : Invalid param  0";
+
+        assertThat(readableErrors.get("little boy")).isEqualTo(null);
+        assertThat(readableErrors.get("Pasha")).isEqualTo(null);
+        assertThat(readableErrors.get("Victoria"))
+            .isEqualTo(expectedOut);
+    }
 }
